# Polymarket_bot_2

./: .gitignore  STAGE3_TESTING.md  TESTING_GUIDE.md  TESTING_GUIDE_STAGE3_DATE_BASED.md  e for trade storage (Phase 2)  pyproject.toml  stages.cursurrules
.cursor/rules/: project.mdc  python.mdc
docs/: FINDING_CONTRACT_ADDRESS.md  MARKET_START_DATE.md  THE_GRAPH_API.md
scripts/: README_FETCH_ALL_TRADES.md  auto_find_contract.py  check_graphql_schema.py  fetch_all_trades.py  find_polymarket_contract.py  get_market_id_from_hashdive.py  stage1_extract_markets.py  stage1_main.py  stage2_main.py  stage3_blockchain.py  test_api_pagination.py  test_graphql_schema.py  test_market_info_fields.py  test_market_start_date.py  test_timestamp_params.py  view_trades.py
src/: __init__.py
src/database/: __init__.py  connection.py  models.py  repository.py
src/extractors/: __init__.py  market_extractor.py  models.py  url_parser.py
src/parser/: __init__.py  api_client.py  blockchain_client.py  blockchain_trade_parser.py  optimized_blockchain_parser.py  trade_parser.py
src/utils/: config.py  logger.py
tests/: __init__.py  test_market_extractor.py  test_url_parser.py
