[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Telegram bot for Polymarket trade data analysis"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.18.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pyright>=1.1.0",
]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"

